--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "6",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "sweetalert2": "^11.6.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
